--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "dev": "vite",
     "start": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint ."
   },
   "devDependencies": {
+    "@eslint/js": "^9.29.0",
+    "@eslint/json": "^0.12.0",
+    "eslint": "^9.29.0",
+    "globals": "^16.2.0",
     "vite": "^6.3.5"
   }
 }
