--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@eslint/json": "^0.12.0",
     "eslint": "^9.29.0",
     "globals": "^16.2.0",
+    "rollup": "^4.43.0",
     "vite": "^6.3.5"
   }
 }
